--- a/RMarkdown_demo.Rmd
+++ b/RMarkdown_demo.Rmd
@@ -17,11 +17,11 @@ library("devtools")
 library("ggplot2")
 #install.packages("RCurl")
 library("RCurl")
-#install.packages("ggplot2")
-library("ggplot2")
 #install.packages("vegan")
 library("vegan")
 ```
+
+Changes made here to confirm functionality of git push to remote repo
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
